<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>fr.insalyon.creatis</groupId>
    <artifactId>grida</artifactId>
    <packaging>pom</packaging>

    <name>GRIDA</name>
    <description>GRID data manager Agent</description>
    <version>${revision}${sha1}${changelist}</version>

    <inceptionYear>2011</inceptionYear>
    <url>https://github.com/virtual-imaging-platform/GRIDA</url>

    <licenses>
        <license>
            <name>CeCILL-B, Version 1.0</name>
            <url>http://www.cecill.info/</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>CREATIS-LRMN</name>
        <url>http://www.creatis.insa-lyon.fr/</url>
    </organization>

    <modules>
        <module>grida-common</module>
        <module>grida-client</module>
        <module>grida-server</module>
        <module>grida-standalone</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <revision>3.0.0</revision>
        <changelist/>
        <sha1/>
    </properties>

    <build>
        <plugins>
            <plugin>
              <groupId>org.codehaus.mojo</groupId>
              <artifactId>flatten-maven-plugin</artifactId>
              <version>1.1.0</version>
              <configuration>
                <updatePomFile>true</updatePomFile>
                <flattenMode>resolveCiFriendliesOnly</flattenMode>
              </configuration>
              <executions>
                <execution>
                  <id>flatten</id>
                  <phase>process-resources</phase>
                  <goals>
                    <goal>flatten</goal>
                  </goals>
                </execution>
                <execution>
                  <id>flatten.clean</id>
                  <phase>clean</phase>
                  <goals>
                    <goal>clean</goal>
                  </goals>
                </execution>
              </executions>
            </plugin>
        </plugins>
    </build>

    <repositories>
        <repository>
            <id>creatis</id>
            <name>Creatis Insa Lyon repository [creatis]</name>
            <url>https://vip.creatis.insa-lyon.fr:9007/nexus/repository/public</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.11.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <distributionManagement>
        <repository>
            <id>creatis-releases</id>
            <name>Internal Releases</name>
            <url>https://vip.creatis.insa-lyon.fr:9007/nexus/repository/releases</url>
        </repository>

        <snapshotRepository>
            <id>creatis-snapshots</id>
            <name>Internal Snapshots</name>
            <url>https://vip.creatis.insa-lyon.fr:9007/nexus/repository/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
</project>
